Tags as DB Collection. Tags can be retrieved via route GET /tags/. District calendar categories are mapped to tags.
